[package]
name = "rmenu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4"
font-kit = "0.7"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1", features = ["derive"] }
pathfinder_geometry = "0.5"
smithay-client-toolkit = "0.15"
wayland-client = "0.29"
env_logger = "0.8"
serde_yaml = "0.8"
regex = "1.5"
anyhow = "1.0"
raqote = "0.8"
log = "0.4"